kube-infra/kustomize/podtato-head/podtato-head/envs/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podtato-head
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-development-aws
spec:
  rules:
  - host: podtatohead.dev.ortelius.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: podtato-head-entry
            port:
              number: 9000
